--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"zod": "^3.24.4"
 	},
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.2.5",
 		"@tanstack/svelte-query": "^5.75.0",
 		"@tanstack/table-core": "^8.21.3",
 		"axios": "^1.9.0",
