--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"@tanstack/svelte-query": "^5.75.0",
 		"@tanstack/table-core": "^8.21.3",
 		"axios": "^1.9.0",
+		"date-fns": "^4.1.0",
 		"js-cookie": "^3.0.5",
 		"libphonenumber-js": "^1.12.7",
 		"runed": "^0.23.4",
