--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@tanstack/svelte-query-devtools": "^5.75.0",
 		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^24.0.3",
 		"@types/validator": "^13.15.0",
 		"autoprefixer": "^10.4.21",
 		"bits-ui": "2.8.0",
@@ -48,6 +49,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.34.3",
 		"svelte-check": "^4.1.7",
+		"svelte-preprocess": "^6.0.3",
 		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.26.1",
 		"tailwind-merge": "^3.3.1",
