--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"@radix-ui/react-toggle": "^1.1.1",
 		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.7",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.53.0",
 		"@tanstack/react-query": "^5.81.5",
 		"@tanstack/react-query-devtools": "^5.81.5",
 		"axios": "^1.10.0",
